php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35358 Incorrect error messages for PDO class constants
Submitted: 2005-11-23 23:53 UTC Modified: 2005-11-24 17:22 UTC
From: stochnagara at hotmail dot com Assigned: iliaa (profile)
Status: Closed Package: PDO related
PHP Version: 5CVS-2005-11-23 (snap) OS: irrelevant
Private report: No CVE-ID: None
 [2005-11-23 23:53 UTC] stochnagara at hotmail dot com
Description:
------------
I found the following inconstitences in some error string for PDO.

pdo_dbh.c:
line 511, 533, 720, 731, 757: PDO_ATTR_STATEMENT_CLASS should be replaced with PDO::ATTR_STATEMENT_CLASS
pdo_stmt.c:
lines 1122, 1137 PDO_FETCH_SERIALIZE -> PDO::FETCH_SERIALIZE
lines 1130 : PDO_FETCH_FUNC -> PDO::FETCH_FUNC
lines 1137, 1141 : PDO_FETCH_CLASS -> PDO::FETCH_CLASS
lines 1141 : PDO_FETCH_CLASS_TYPE -> PDO::FETCH_CLASS_TYPE
lines 1369 : PDO_FETCH_COLUMN -> PDO::FETCH_COLUMN

These are not C constants but part of error message strings so :: is needed.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-23 23:57 UTC] helly@php.net
Any chgance you can provide a 'cvs diff -u' patch?
 [2005-11-24 14:58 UTC] stochnagara at hotmail dot com
Sorry, the is no chance, unfortunately:(
 [2005-11-24 17:22 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 06:00:01 2026 UTC