Fixed bug #35358 (Incorrect error messages for PDO class constants).