ext/pdo/pdo_dbh.c
@@ -508,7 +508,7 @@ static PHP_METHOD(PDO, prepare)
 			|| zend_lookup_class(Z_STRVAL_PP(item), Z_STRLEN_PP(item), &pce TSRMLS_CC) == FAILURE
 		) {
 			pdo_raise_impl_error(dbh, NULL, "HY000", 
-				"PDO_ATTR_STATEMENT_CLASS requires format array(classname, ctor_args); "
+				"PDO::ATTR_STATEMENT_CLASS requires format array(classname, ctor_args); "
 				"the classname must be a string specifying an existing class"
 				TSRMLS_CC);
 			PDO_HANDLE_DBH_ERR();
@@ -530,7 +530,7 @@ static PHP_METHOD(PDO, prepare)
 		if (zend_hash_index_find(Z_ARRVAL_PP(opt), 1, (void**)&item) == SUCCESS) {
 			if (Z_TYPE_PP(item) != IS_ARRAY) {
 				pdo_raise_impl_error(dbh, NULL, "HY000", 
-					"PDO_ATTR_STATEMENT_CLASS requires format array(classname, ctor_args); "
+					"PDO::ATTR_STATEMENT_CLASS requires format array(classname, ctor_args); "
 					"ctor_args must be an array"
 				TSRMLS_CC);
 				PDO_HANDLE_DBH_ERR();
@@ -717,7 +717,7 @@ static PHP_METHOD(PDO, setAttribute)
 
 			if (dbh->is_persistent) {
 				pdo_raise_impl_error(dbh, NULL, "HY000", 
-					"PDO_ATTR_STATEMENT_CLASS cannot be used with persistent PDO instances"
+					"PDO::ATTR_STATEMENT_CLASS cannot be used with persistent PDO instances"
 					TSRMLS_CC);
 				PDO_HANDLE_DBH_ERR();
 				RETURN_FALSE;
@@ -728,7 +728,7 @@ static PHP_METHOD(PDO, setAttribute)
 				|| zend_lookup_class(Z_STRVAL_PP(item), Z_STRLEN_PP(item), &pce TSRMLS_CC) == FAILURE
 			) {
 				pdo_raise_impl_error(dbh, NULL, "HY000", 
-					"PDO_ATTR_STATEMENT_CLASS requires format array(classname, array(ctor_args)); "
+					"PDO::ATTR_STATEMENT_CLASS requires format array(classname, array(ctor_args)); "
 					"the classname must be a string specifying an existing class"
 					TSRMLS_CC);
 				PDO_HANDLE_DBH_ERR();
@@ -754,7 +754,7 @@ static PHP_METHOD(PDO, setAttribute)
 			if (zend_hash_index_find(Z_ARRVAL_P(value), 1, (void**)&item) == SUCCESS) {
 				if (Z_TYPE_PP(item) != IS_ARRAY) {
 					pdo_raise_impl_error(dbh, NULL, "HY000", 
-						"PDO_ATTR_STATEMENT_CLASS requires format array(classname, array(ctor_args)); "
+						"PDO::ATTR_STATEMENT_CLASS requires format array(classname, array(ctor_args)); "
 						"ctor_args must be an array"
 					TSRMLS_CC);
 					PDO_HANDLE_DBH_ERR();
